--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,11 @@
+fcch-acl-server (2) UNRELEASED; urgency=medium
+
+  * Better var/ perms.
+
+ -- Stephen Warren <swarren@wwwdotorg.org>  Wed, 03 Apr 2024 21:16:01 -0600
+
 fcch-acl-server (1) bookworm; urgency=medium
 
   * Initial version.
 
- -- Stephen Warren <swarren@sprint>  Sat, 09 Mar 2024 13:06:58 -0700
+ -- Stephen Warren <swarren@wwwdotorg.org>  Sat, 09 Mar 2024 13:06:58 -0700
