--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-fcch-acl-server (2) UNRELEASED; urgency=medium
+fcch-acl-server (2) bookworm; urgency=medium
 
   * Better var/ perms.
   * Create an HTTP log file.
 
- -- Stephen Warren <swarren@wwwdotorg.org>  Wed, 03 Apr 2024 21:16:51 -0600
+ -- Stephen Warren <swarren@wwwdotorg.org>  Wed, 03 Apr 2024 21:31:07 -0600
 
 fcch-acl-server (1) bookworm; urgency=medium
 
